--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,8 +3,7 @@
     
     
     <div class="col s2">
-        <div class="collection" id="shops">
-        </div>
+        <div class="collection" id="shops"> </div>
     </div>
     <div class="col s10"> 
             <div id="goods" ></div>
